Closed
Bug 1023194
Opened 11 years ago
Closed 11 years ago
Fix suface stride calculation for 16-bit images
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox31 | --- | unaffected |
| firefox32 | + | fixed |
| firefox33 | + | verified |
| b2g-v1.4 | --- | unaffected |
| b2g-v2.0 | --- | fixed |
| b2g-v2.1 | --- | fixed |
| fennec | 32+ | --- |
People
(Reporter: CristinaM, Assigned: mwu)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
76.35 KB,
image/png
|
Details | |
|
1.83 KB,
patch
|
seth
:
review+
|
Details | Diff | Splinter Review |
Environment:
Samsung Galaxy R (Android 2.3.4) and Acer Iconia (Android 3.2.1)
Aurora 32.0a2 (2014-06-10)
Steps to reproduce:
1. Launch Fennec;
2. Go to Settings -> Mozilla -> About Aurora.
Expected result:
"Check for updates" button has grey background.
Actual result:
The button has transparent background.
Notes: Not reproducible on Android 4.x
Comment 1•11 years ago
|
||
Is this a regression?
| Reporter | ||
Comment 2•11 years ago
|
||
Regression window:
Last good revision - d4fc8141e2db
First bad revision - 79624417d247
Comment 3•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=d4fc8141e2db&tochange=79624417d247
Mike Wu - bug 994081, looks like you regressed this.
Blocks: 994081
tracking-fennec: --- → ?
status-firefox31:
--- → unaffected
tracking-firefox32:
--- → ?
tracking-firefox33:
--- → ?
Flags: needinfo?(mwu)
Keywords: regression
Comment 4•11 years ago
|
||
This affects all version of Android under 4.0. Tested on 2.2 and 2.3 as well.
| Assignee | ||
Comment 5•11 years ago
|
||
The 16 bit image optimization path was broken.
Assignee: nobody → mwu
Flags: needinfo?(mwu)
Comment 6•11 years ago
|
||
OK so this depends on the device memory not Android version. Anything that matches our check for LOW_MEMORY_THRESHOLD_MB will be affected. http://dxr.mozilla.org/mozilla-central/source/mobile/android/base/util/HardwareUtils.java#28
| Assignee | ||
Comment 7•11 years ago
|
||
Cairo fails if we pass it a stride that's not a multiple of four, which makes sense.
Attachment #8437951 -
Flags: review?(seth)
| Assignee | ||
Comment 8•11 years ago
|
||
This will also affect B2G on devices that use 16bit surfaces.
blocking-b2g: --- → 2.0?
status-b2g-v1.4:
--- → unaffected
status-b2g-v2.0:
--- → affected
status-b2g-v2.1:
--- → affected
Updated•11 years ago
|
Summary: "Check for updates" button has transparent background → Fix suface stride calculation for 16-bit images
| Assignee | ||
Updated•11 years ago
|
Component: General → ImageLib
Product: Firefox for Android → Core
Version: Firefox 32 → Trunk
Updated•11 years ago
|
Updated•11 years ago
|
tracking-fennec: ? → 32+
Updated•11 years ago
|
blocking-b2g: 2.0? → 2.0+
Comment 9•11 years ago
|
||
Comment on attachment 8437951 [details] [diff] [review]
Fix stride calculation for 16bit images
Review of attachment 8437951 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good.
Attachment #8437951 -
Flags: review?(seth) → review+
| Assignee | ||
Comment 10•11 years ago
|
||
Comment 11•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
| Reporter | ||
Comment 12•11 years ago
|
||
Verified as fixed in
Build: 33.0a1 (2014-06-16)
Device: Samsung Galaxy R (Android 2.3.4)
Comment 13•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•