Bug 1023194 - Fix stride calculation on 16 bit images, r=seth